--- a/templates/projects/blog.html
+++ b/templates/projects/blog.html
@@ -6,42 +6,32 @@
 {% block content %}
 {{ render_local_nav(current_user, 'auditlog', project.short_name) }}
 {% if project %}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                {{ helper.render_project_title(project, upload_method) }}
-                <hr>
-                {% if blogposts %}
-                <hr>
-                    <ul>
-                        {% for blogpost in blogposts %}
-                          <li>
-                              <div>
-                                  <a href="{{url_for('project.show_blogpost', short_name=project.short_name, id=blogpost.id)}}">{{ blogpost.title }}</a>
-                              </div>
-                          </li>
-                        {% endfor %}
-                    </ul>
-                {% else %}
-                    <h1>Sorry! No posts so far.</h1>
-                {% endif %}
-                <hr>
-            </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            {{ helper.render_project_title(project, upload_method) }}
+            <hr>
+            {% if blogposts %}
+            <hr>
+                <ul>
+                    {% for blogpost in blogposts %}
+                      <li>
+                          <div>
+                              <a href="{{url_for('project.show_blogpost', short_name=project.short_name, id=blogpost.id)}}">{{ blogpost.title }}</a>
+                          </div>
+                      </li>
+                    {% endfor %}
+                </ul>
+            {% else %}
+                <h1>Sorry! No posts so far.</h1>
+            {% endif %}
+            <hr>
         </div>
     </div>
 </div>
 {% else %}
-<div class="container-padded remove-padding-bottom">
-    <section class="white">
-        <div class="container container-padded">
-            <div class="page-header padding-top container">
-                <h1>Sorry! This project does not exist.</h1>
-            </div>
-        </div>
-    </section>
-</div>
+    {{ helper.render_non_existant_project() }}
 {% endif %}
 {{ helper.broken_image() }}
 {{ helper.knob() }}
