--- a/templates/projects/index.html
+++ b/templates/projects/index.html
@@ -56,7 +56,7 @@
             {% endif %}
             {% else %}
                 <div class="container container-padded">
-                    <h2 class="text-center inset-text-grey">Sorry, there are no published projects for this category yet</h2>
+                    <h2 class="text-center inset-text-grey">Sorry, there are no published projects for this category yet.</h2>
                 </div>
             {% endif %}
         </div>
