--- a/templates/projects/password.html
+++ b/templates/projects/password.html
@@ -4,22 +4,20 @@
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div id="project-form" class="row">
-            <div class="col-sm-6 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                {{ helper.render_project_title(project) }}
-                <h2>Enter the password to contribute to this project:</h2>
-                <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
-                    {{ form.hidden_tag() }}
-                    {{ render_field(form.password, placeholder="Project password" ,class="form-control", required="required", type="password")}}
-                    <div class="pull-right form-actions" role="group">
-                        <a href="{{ url_for('home.home') }}" class="btn btn-default">Cancel</a>
-                        <button type="submit" value="Submit" class="btn btn-danger">Submit</button>
-                    </div>
-                </form>
-            </div>
+<div class="container container-main">
+    <div id="project-form" class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            {{ helper.render_project_title(project) }}
+            <h2>Enter the password to contribute to this project:</h2>
+            <form class="form-horizontal" method="post" action="{{ url_for('project.password_required', short_name=short_name, next=next) }}">
+                {{ form.hidden_tag() }}
+                {{ render_field(form.password, placeholder="Project password" ,class="form-control", required="required", type="password")}}
+                <div class="pull-right form-actions" role="group">
+                    <a href="{{ url_for('home.home') }}" class="btn btn-default">Cancel</a>
+                    <button type="submit" value="Submit" class="btn btn-danger">Submit</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
