--- a/templates/projects/tutorial.html
+++ b/templates/projects/tutorial.html
@@ -6,12 +6,10 @@
 
 {{ project.info.tutorial | safe}}
 
-<div class="container-padded">
-    <div class="container container-padded padding-top-lg">
-        {% include "_flash_messages.html" %}
-        <a id="start" href={{url_for('project.presenter', short_name = project.short_name)}}
-           class="btn btn-danger"><i class="fa fa-thumbs-o-up"></i> Contribute
-        </a>
-    </div>
+<div class="container container-main padding-top-lg">
+    {% include "_flash_messages.html" %}
+    <a id="start" href={{url_for('project.presenter', short_name = project.short_name)}}
+       class="btn btn-danger"><i class="fa fa-thumbs-o-up"></i> Contribute
+    </a>
 </div>
 {% endblock %}
