--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -495,7 +495,7 @@ hr.extra-margins {
 
 .container-main {
     padding-top: 100px;
-    padding-bottom: 50px
+    padding-bottom: 100px
 }
 
 .white-panel {
@@ -2379,7 +2379,8 @@ footer {
     background-color: #F9F9F9;
     font-family: sans-serif;
     font-size: 12px;
-    z-index: 100
+    z-index: 100;
+    position: relative;
 }
 
 footer ul {
