--- a/templates/account/account_validation.html
+++ b/templates/account/account_validation.html
@@ -2,10 +2,9 @@
 
 {% block content %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
-<div class="container-padded">
-    <div class="container container-padded">
+<div class="container container-main">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             {% include "_flash_messages.html" %}
             <div class="col-sm-6 col-sm-offset-3">
                 <div class="white-panel inset-shadow-white">
@@ -18,6 +17,5 @@
             </div>
         </div>
     </div>
-  </div>
 </div>
 {% endblock %}
