--- a/templates/account/profile.html
+++ b/templates/account/profile.html
@@ -6,12 +6,10 @@
 
 {% block content %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
-<div class="container-padded  remove-padding-bottom">
-    <section class="pattern-brushed box-shadow-grey">
-        <div class="container padding-top-lg">
-            {% include "_flash_messages.html" %}
-            {{ helper.render_user_profile(current_user, upload_method, "settings") }}
-        </div>
+<div class="container-main">
+    <section class="container">
+        {% include "_flash_messages.html" %}
+        {{ helper.render_user_profile(current_user, upload_method, "settings") }}
     </section>
 
     {% if projects_contrib %}
