--- a/templates/account/projects.html
+++ b/templates/account/projects.html
@@ -5,42 +5,40 @@
 
 {% block content %}
 {{ project_helper.render_project_local_nav(active_link="open", current_user=current_user) }}
-<div class="container-padded remove-padding-bottom">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                <div class="row vcenter hcenter">
-                    <div class="col-md-8 col-xs-12">
-                        <h1>Open Project</h1>
-                    </div>
-                    <div class="col-md-4 col-xs-12">
-                        <a href="{{url_for('project.new')}}" class="btn btn-danger pull-right">Create a Project</a>
-                    </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            <div class="row vcenter hcenter">
+                <div class="col-md-8 col-xs-12">
+                    <h1>Open Project</h1>
                 </div>
-                <hr>
-                {% if all_projects %}
-                <div class="col-xs-12">
-                    <h2>Published</h2>
+                <div class="col-md-4 col-xs-12">
+                    <a href="{{url_for('project.new')}}" class="btn btn-danger pull-right">Create a Project</a>
                 </div>
-                <table class="table table-stripped table-condensed table-hover table-responsive">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th class="text-center">Category</th>
-                            <th class="text-center">Created</th>
-                        </tr>
-                    </thead>
-                    {% for project in all_projects %}
-                      {{ project_helper.render_project_short_summary(project, upload_method) }}
-                    {% endfor %}
-                </table>
-                {% else %}
-                <div class="col-xs-12">
-                    <h2>No projects have been created</h2>
-                </div>
-               {% endif %}
             </div>
+            <hr>
+            {% if all_projects %}
+            <div class="col-xs-12">
+                <h2>Published</h2>
+            </div>
+            <table class="table table-stripped table-condensed table-hover table-responsive">
+                <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th class="text-center">Category</th>
+                        <th class="text-center">Created</th>
+                    </tr>
+                </thead>
+                {% for project in all_projects %}
+                  {{ project_helper.render_project_short_summary(project, upload_method) }}
+                {% endfor %}
+            </table>
+            {% else %}
+            <div class="col-xs-12">
+                <h2>No projects have been created</h2>
+            </div>
+           {% endif %}
         </div>
     </div>
 </div>
