--- a/templates/account/public_profile.html
+++ b/templates/account/public_profile.html
@@ -10,14 +10,10 @@
     {{ privacy.render_lock_page() }}
 {% else %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
-<div class="container-padded remove-padding-bottom">
-    <section class="mid-grey pattern-brushed box-shadow-grey-bottom padding-bottom-md">
-        <div class="container padding-top-lg">
-            {% include "_flash_messages.html" %}
-            <section id="user-data">
-                {{ helper.render_user_profile(user, upload_method, settings=False, private=False) }}
-            </section>
-        </div>
+<div class="container-main">
+    <section class="container">
+        {% include "_flash_messages.html" %}
+        {{ helper.render_user_profile(user, upload_method, settings=False, private=False) }}
     </section>
 
     {% if projects %}
