--- a/templates/admin/del_category.html
+++ b/templates/admin/del_category.html
@@ -5,23 +5,21 @@
 
 {% block content %}
 {{ render_admin_local_nav(current_user, active_link) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                <h1><strong>Admin:</strong> Delete Category</h1>
-                <hr>
-                <div class="alert alert-danger">
-                    <strong>Warning!</strong> Deleting the category will remove all associated projects. This operation cannot be undone.
-                </div>
-                <h2>Delete Category: {{category.name}}?</h2>
-                <form method="POST" role="form" action="{{url_for('admin.del_category', id=category.id)}}">
-                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                    <input class="btn btn-danger" type="submit"  value="Yes"></input>
-                    <a class="btn btn-success" href="{{url_for('admin.categories')}}">No, do not delete it</a>
-                </form>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            <h1><strong>Admin:</strong> Delete Category</h1>
+            <hr>
+            <div class="alert alert-danger">
+                <strong>Warning!</strong> Deleting the category will remove all associated projects. This operation cannot be undone.
             </div>
+            <h2>Delete Category: {{category.name}}?</h2>
+            <form method="POST" role="form" action="{{url_for('admin.del_category', id=category.id)}}">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                <input class="btn btn-danger" type="submit"  value="Yes"></input>
+                <a class="btn btn-success" href="{{url_for('admin.categories')}}">No, do not delete it</a>
+            </form>
         </div>
     </div>
 </div>
