--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -6,78 +6,76 @@
 {% block content %}
 <span class="set-main-bg" data-bg="pattern-white-wall"></span>
 {{ render_admin_local_nav(current_user, active_link) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                <div class="col-xs-12 padding-bottom-xs">
-                    <h1 class="inset-text-grey"><strong>Admin Options</strong></h1>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            <div class="col-xs-12 padding-bottom-xs">
+                <h1 class="inset-text-grey"><strong>Admin Options</strong></h1>
+            </div>
+            <div id="projects" class="col-sm-6 col-md-4">
+                <a href="{{ url_for('account.projects', name=current_user.name) }}" rel="nofollow">
+                <div class="well">
+                    <i class="fa fa-folder-open fa-4x"></i>
+                    <h3  class="margin-bottom-xs">Projects</h3>
                 </div>
-                <div id="projects" class="col-sm-6 col-md-4">
-                    <a href="{{ url_for('account.projects', name=current_user.name) }}" rel="nofollow">
+                </a>
+            </div>
+
+            <div id="featured-projects" class="col-sm-6 col-md-4">
+                <a href="{{url_for('admin.featured')}}" rel="nofollow">
+                <div class="well">
+                    <i class="fa fa-star fa-4x"></i>
+                    <h3  class="margin-bottom-xs">Featured</h3>
+                </div>
+                </a>
+            </div>
+
+            <div id="categories" class="col-sm-6 col-md-4">
+                <a href="{{url_for('admin.categories')}}" rel="nofollow">
+                <div class="well">
+                    <i class="fa fa-check fa-4x"></i>
+                    <h3  class="margin-bottom-xs">Categories</h3>
+                </div>
+                </a>
+            </div>
+
+            <div id="users" class="col-sm-6 col-md-4">
+                <a href="{{url_for('admin.users')}}" rel="nofollow">
+                <div class="well">
+                    <i class="fa fa-user fa-4x"></i>
+                    <h3  class="margin-bottom-xs">Administrators</h3>
+                </div>
+                </a>
+            </div>
+
+            <div id="users-list" class="col-sm-6 col-md-4">
+                <a href="{{url_for('admin.export_users', format='csv')}}" rel="nofollow">
                     <div class="well">
-                        <i class="fa fa-folder-open fa-4x"></i>
-                        <h3  class="margin-bottom-xs">Projects</h3>
+                        <i class="fa fa-list fa-4x"></i>
+                        <h3  class="margin-bottom-xs">Export Users</h3>
                     </div>
-                    </a>
-                </div>
+                </a>
+            </div>
 
-                <div id="featured-projects" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('admin.featured')}}" rel="nofollow">
-                    <div class="well">
-                        <i class="fa fa-star fa-4x"></i>
-                        <h3  class="margin-bottom-xs">Featured</h3>
-                    </div>
-                    </a>
+            <div id="dashboard" class="col-sm-6 col-md-4">
+                <a href="{{url_for('rq_dashboard.overview')}}" rel="nofollow">
+                <div class="well">
+                    <i class="fa fa-dashboard fa-4x"></i>
+                    <h3  class="margin-bottom-xs">Background Jobs</h3>
                 </div>
+                </a>
+            </div>
 
-                <div id="categories" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('admin.categories')}}" rel="nofollow">
-                    <div class="well">
-                        <i class="fa fa-check fa-4x"></i>
-                        <h3  class="margin-bottom-xs">Categories</h3>
-                    </div>
-                    </a>
-                </div>
-
-                <div id="users" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('admin.users')}}" rel="nofollow">
-                    <div class="well">
-                        <i class="fa fa-user fa-4x"></i>
-                        <h3  class="margin-bottom-xs">Administrators</h3>
-                    </div>
-                    </a>
-                </div>
-
-                <div id="users-list" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('admin.export_users', format='csv')}}" rel="nofollow">
-                        <div class="well">
-                            <i class="fa fa-list fa-4x"></i>
-                            <h3  class="margin-bottom-xs">Export Users</h3>
-                        </div>
-                    </a>
-                </div>
-
-                <div id="dashboard" class="col-sm-6 col-md-4">
-                    <a href="{{url_for('rq_dashboard.overview')}}" rel="nofollow">
-                    <div class="well">
-                        <i class="fa fa-dashboard fa-4x"></i>
-                        <h3  class="margin-bottom-xs">Background Jobs</h3>
-                    </div>
-                    </a>
-                </div>
-
-                <div class="col-xs-12">
-                    <div class="white-panel inset-shadow-white chart">
-                        <h2 class="text-center">Latest Developments</h2>
-                        <ul class="news">
-                            {% for new in news %}
-                                {{ new }}
-                            <li><strong>{{new.updated[0:10]}}</strong> {% if 'github' in new.links[0].href %} <span class="label label-info">{{_('New PyBossa version')}}</span> {% else %} <span class="label label-default">{{_('New SciFabric Blog Post')}}</span> {% endif %}<a target="_blank" href="{{new.links[0].href}}">{{new.title}}</a></li>
-                            {% endfor %}
-                        </ul>
-                    </div>
+            <div class="col-xs-12">
+                <div class="white-panel inset-shadow-white chart">
+                    <h2 class="text-center">Latest Developments</h2>
+                    <ul class="news">
+                        {% for new in news %}
+                            {{ new }}
+                        <li><strong>{{new.updated[0:10]}}</strong> {% if 'github' in new.links[0].href %} <span class="label label-info">{{_('New PyBossa version')}}</span> {% else %} <span class="label label-default">{{_('New SciFabric Blog Post')}}</span> {% endif %}<a target="_blank" href="{{new.links[0].href}}">{{new.title}}</a></li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
         </div>
