--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -2,14 +2,12 @@
 {% set active_page = "search" %}
 
 {% block content %}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-12">
-                {% include "_flash_messages.html" %}
-                <h1>Search Results</h1>
-                <gcse:searchresults-only></gcse:searchresults-only>
-            </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-12">
+            {% include "_flash_messages.html" %}
+            <h1>Search Results</h1>
+            <gcse:searchresults-only></gcse:searchresults-only>
         </div>
     </div>
 </div>
