--- a/templates/projects/importers/twitter.html
+++ b/templates/projects/importers/twitter.html
@@ -7,31 +7,29 @@
 {% from "_formhelpers.html" import render_field %}
 {{ helper.render_loading(loading_text) }}
 {{ render_local_nav(current_user, "tasks", project.short_name) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                {{ helper.render_loading(loading_text) }}
-                <h1><strong>{{project.name}}</strong>: Import tasks</h1>
-                {% if form %}
-                <hr>
-                <div class="row vcenter">
-                    <h3>From a Twitter hashtag or account</h3>
-                </div>
-                <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
-                    <fieldset>
-                        {{ form.hidden_tag() }}
-                        {{ render_field(form.source, class_="input-block-level form-control", placeholder='#hashtag or @user or something else') }}
-                        {{ render_field(form.max_tweets, class_="input-block-level form-control") }}
-                        <div class="pull-right" role="group">
-                            <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Cancel</a>
-                            <input id="import" type="submit" value="Import" class="btn btn-danger" />
-                        </div>
-                    </fieldset>
-                </form>
-                {% endif %}
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            {{ helper.render_loading(loading_text) }}
+            <h1><strong>{{project.name}}</strong>: Import tasks</h1>
+            {% if form %}
+            <hr>
+            <div class="row vcenter">
+                <h3>From a Twitter hashtag or account</h3>
             </div>
+            <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
+                <fieldset>
+                    {{ form.hidden_tag() }}
+                    {{ render_field(form.source, class_="input-block-level form-control", placeholder='#hashtag or @user or something else') }}
+                    {{ render_field(form.max_tweets, class_="input-block-level form-control") }}
+                    <div class="pull-right" role="group">
+                        <a href="{{ url_for('project.tasks', short_name=project.short_name) }}" class="btn btn-default">Cancel</a>
+                        <input id="import" type="submit" value="Import" class="btn btn-danger" />
+                    </div>
+                </fieldset>
+            </form>
+            {% endif %}
         </div>
     </div>
 </div>
