--- a/templates/projects/non_stats.html
+++ b/templates/projects/non_stats.html
@@ -5,14 +5,12 @@
 
 {% block content %}
 {{ render_local_nav(current_user, "statistics", project.short_name) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                {{helper.render_project_title(project, upload_method, subtitle='Statistics') }}
-                <h3>Sorry, there are no statistics for this project yet</h3>
-            </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            {{helper.render_project_title(project, upload_method, subtitle='Statistics') }}
+            <h3>Sorry, there are no statistics for this project yet</h3>
         </div>
     </div>
 </div>
