--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -10,19 +10,17 @@
             });
 </script>
 <script src="{{url_for('static', filename='js/pybossa/pybossa.js')}}" type="text/javascript"></script>
-<div class="container-padded">
-    <div class="container container-padded remove-padding-bottom">
-        {% include "_flash_messages.html" %}
-        {% if invite_new_volunteers %}
-            <div class="row">
-                <div class="col-xs-12 text-center padding-top-lg">
-                    <h1>Great, you've contributed to all the tasks for this project.</h1>
-                    <h2>But this project still needs more volunteers, so please spread the word!</h2>
-                    <a href="/"><i class="fa fa-home fa-3x"></i></a>
-                </div>
+<div class="container container-main">
+    {% include "_flash_messages.html" %}
+    {% if invite_new_volunteers %}
+        <div class="row">
+            <div class="col-xs-12 text-center padding-top-lg">
+                <h1>Great, you've contributed to all the tasks for this project.</h1>
+                <h2>But this project still needs more volunteers, so please spread the word!</h2>
+                <a href="/"><i class="fa fa-home fa-3x"></i></a>
             </div>
-        {% endif %}
-        {{ project.info.task_presenter|safe }}
-    </div>
+        </div>
+    {% endif %}
+    {{ project.info.task_presenter|safe }}
 </div>
 {% endblock %}
