--- a/templates/projects/task_presenter_options.html
+++ b/templates/projects/task_presenter_options.html
@@ -5,13 +5,11 @@
 
 {% block content %}
 {{ render_local_nav(current_user, "tasks", project.short_name) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                {% include "projects/snippets/options.html" %}
-            </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            {% include "projects/snippets/options.html" %}
         </div>
     </div>
 </div>
