--- a/templates/projects/task_priority.html
+++ b/templates/projects/task_priority.html
@@ -5,39 +5,35 @@
 {% from "admin/_helpers.html" import render_local_nav %}
 
 {% block content %}
-    
+
 {% if project %}
 {{ render_local_nav(current_user, "tasks", project.short_name) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                {% include "_flash_messages.html" %}
-                {{ helper.render_project_title(project, subtitle="Task Priority") }}
-                
-                <p>Set the <strong>priority</strong> of one or more tasks by providing a list of task IDs below.</p>
-                <p>The lowest priority is <span class="label label-danger">0.0</span> and the highest is <span class="label label-danger">1.0</span></p>
-                <p>This priority value is only respected by the <strong>default scheduler</strong>.</p>
-                <form id="task_priority" class="form-horizontal" method="post" action="{{ url_for('project.task_priority', short_name=project.short_name) }}">
-                    {{ form.hidden_tag() }}
-                    <fieldset>
-                        {{ render_field(form.task_ids, class_="form-control", placeholder="Comma separated task IDs (e.g. 3, 532, 100)", required="required", autofocus="autofocus")}}
-                        {{ render_field(form.priority_0, class_="form-control", placeholder="Priority between 0.0 and 1.0", required="required", type="number", step="any")}}
-                        <div class="pull-right" role="group">
-                            <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
-                            <input type="submit" value="Set Priority" class="btn btn-danger" />
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+            {% include "_flash_messages.html" %}
+            {{ helper.render_project_title(project, subtitle="Task Priority") }}
+
+            <p>Set the <strong>priority</strong> of one or more tasks by providing a list of task IDs below.</p>
+            <p>The lowest priority is <span class="label label-danger">0.0</span> and the highest is <span class="label label-danger">1.0</span></p>
+            <p>This priority value is only respected by the <strong>default scheduler</strong>.</p>
+            <form id="task_priority" class="form-horizontal" method="post" action="{{ url_for('project.task_priority', short_name=project.short_name) }}">
+                {{ form.hidden_tag() }}
+                <fieldset>
+                    {{ render_field(form.task_ids, class_="form-control", placeholder="Comma separated task IDs (e.g. 3, 532, 100)", required="required", autofocus="autofocus")}}
+                    {{ render_field(form.priority_0, class_="form-control", placeholder="Priority between 0.0 and 1.0", required="required", type="number", step="any")}}
+                    <div class="pull-right" role="group">
+                        <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
+                        <input type="submit" value="Set Priority" class="btn btn-danger" />
+                    </div>
+                </fieldset>
+            </form>
         </div>
     </div>
 </div>
 
 {% else %}
-<div class="page-header padding-top container">page-header padding-top container
-    <h1>Sorry! This project does not exist.</h1>
-</div>
+    {{ helper.render_non_existant_project() }}
 {% endif %}
-           
+
 {% endblock %}
