--- a/templates/projects/update.html
+++ b/templates/projects/update.html
@@ -7,73 +7,71 @@
 <script src="{{url_for('static', filename='js/vendor/jquery.Jcrop.min.js')}}"></script>
 <link rel="stylesheet" href="{{url_for('static', filename='css/jquery.Jcrop.min.css')}}" type="text/css" />
 {{ helper.render_project_local_nav(project, 'settings', current_user) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-                    {% include "_flash_messages.html" %}
-                  <h1><strong>{{project.name}}</strong>: Project Details</h1>
-                  <hr>
-                  <!-- Update form for project thumbnail -->
-                  <form method="post" class="form-horizontal upload-img-form padding-top-xs" action="{{ url_for('blplugin.update_project', short_name=project.short_name) }}" enctype="multipart/form-data">
-                      <fieldset>
-                          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-                            <div class="col-xs-12 text-center">
-                                <div class="center-block img-overlay-container">
-                                     {{ helper.render_project_thumbnail(project, upload_method, class="img-thumbnail", id="project.id") }}
-                                    <div class="img-overlay edit-profile-image">
-                                            <i class="fa fa-pencil-square-o fa-3x"></i>
-                                            <span>Edit</span>
-                                    </div>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+                {% include "_flash_messages.html" %}
+              <h1><strong>{{project.name}}</strong>: Project Details</h1>
+              <hr>
+              <!-- Update form for project thumbnail -->
+              <form method="post" class="form-horizontal upload-img-form padding-top-xs" action="{{ url_for('blplugin.update_project', short_name=project.short_name) }}" enctype="multipart/form-data">
+                  <fieldset>
+                      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+                        <div class="col-xs-12 text-center">
+                            <div class="center-block img-overlay-container">
+                                 {{ helper.render_project_thumbnail(project, upload_method, class="img-thumbnail", id="project.id") }}
+                                <div class="img-overlay edit-profile-image">
+                                        <i class="fa fa-pencil-square-o fa-3x"></i>
+                                        <span>Edit</span>
                                 </div>
                             </div>
-                          {{ render_field(upload_avatar_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
-                          {{ upload_avatar_form.x1 }}
-                          {{ upload_avatar_form.y1 }}
-                          {{ upload_avatar_form.x2 }}
-                          {{ upload_avatar_form.y2 }}
-                          <div id="modal" class="modal fade">
-                            <div class="modal-dialog img-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-body">
-                                        <img id="uploadPreview">
-                                    </div>
+                        </div>
+                      {{ render_field(upload_avatar_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
+                      {{ upload_avatar_form.x1 }}
+                      {{ upload_avatar_form.y1 }}
+                      {{ upload_avatar_form.x2 }}
+                      {{ upload_avatar_form.y2 }}
+                      <div id="modal" class="modal fade">
+                        <div class="modal-dialog img-dialog">
+                            <div class="modal-content">
+                                <div class="modal-body">
+                                    <img id="uploadPreview">
+                                </div>
 
-                                    <div class="modal-footer">
-                                        <div class="form-actions text-center">
-                                            <button type="submit" id="upload-btn" name='btn' value="Upload Avatar" class="btn btn-primary btn-lg" >Upload</button>
-                                        </div>
+                                <div class="modal-footer">
+                                    <div class="form-actions text-center">
+                                        <button type="submit" id="upload-btn" name='btn' value="Upload Avatar" class="btn btn-primary btn-lg" >Upload</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                      </fieldset>
-                  </form>
-                {{ helper.render_loading("Loading, please wait...") }}
-                  <!-- Update form for project data-->
-                <form class="visible-form" method="post" action="{{ url_for('blplugin.update_project', short_name = project.short_name) }}" enctype="multipart/form-data">
-                  <fieldset>
-                    {{ form.hidden_tag() }}
-
-                    {{ render_field(form.name, class="form-control", placeholder="Name", show_label=True, required="required", autofocus="autofocus") }}
-                    {{ render_field(form.short_name, class="form-control", placeholder="Short name", show_label=True, label_text="Short name:") }}
-                    {{ render_field(form.description, class="form-control", placeholder="Short description", show_label=True, required="required", pattern=".{0,255}", title="Must be a maximum of 255 characters") }}
-                    {{ render_field(form.long_description, rows="13", placeholder="Explain the project (use Markdown)!", class="form-control", required="required", show_label=True) }}
-                    {{ render_field(form.category_id, class="form-control", show_label=True) }}
-                    {{ render_field(form.allow_anonymous_contributors, class="form-control", show_label=True) }}
-                    {{ render_field(form.protect, id='protect') }}
-                    <div id='password'>{{ render_field(form.password, class="form-control", show_label=True) }}</div>
-                    {{ render_field(form.webhook, class="form-control", show_label=True) }}
-                    <div role="group" class="pull-right">
-                        <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
-                      <button type="submit" name="btn" value="Save the changes" class="btn btn-danger">Save</button>
                     </div>
                   </fieldset>
-                </form>
-              </div>
-            </div>
+              </form>
+            {{ helper.render_loading("Loading, please wait...") }}
+              <!-- Update form for project data-->
+            <form class="visible-form" method="post" action="{{ url_for('blplugin.update_project', short_name = project.short_name) }}" enctype="multipart/form-data">
+              <fieldset>
+                {{ form.hidden_tag() }}
+
+                {{ render_field(form.name, class="form-control", placeholder="Name", show_label=True, required="required", autofocus="autofocus") }}
+                {{ render_field(form.short_name, class="form-control", placeholder="Short name", show_label=True, label_text="Short name:") }}
+                {{ render_field(form.description, class="form-control", placeholder="Short description", show_label=True, required="required", pattern=".{0,255}", title="Must be a maximum of 255 characters") }}
+                {{ render_field(form.long_description, rows="13", placeholder="Explain the project (use Markdown)!", class="form-control", required="required", show_label=True) }}
+                {{ render_field(form.category_id, class="form-control", show_label=True) }}
+                {{ render_field(form.allow_anonymous_contributors, class="form-control", show_label=True) }}
+                {{ render_field(form.protect, id='protect') }}
+                <div id='password'>{{ render_field(form.password, class="form-control", show_label=True) }}</div>
+                {{ render_field(form.webhook, class="form-control", show_label=True) }}
+                <div role="group" class="pull-right">
+                    <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
+                  <button type="submit" name="btn" value="Save the changes" class="btn btn-danger">Save</button>
+                </div>
+              </fieldset>
+            </form>
         </div>
     </div>
+</div>
 <script>
     $("i[rel='tooltip']").tooltip();
     $(function() {
