--- a/templates/projects/webhook.html
+++ b/templates/projects/webhook.html
@@ -6,43 +6,41 @@
 {% block content %}
 {% include "projects/js/webhook.js" %}
 {{ helper.render_project_local_nav(project, 'webhook', current_user, pro_features) }}
-<div class="container-padded">
-    <div class="container container-padded">
-        <div class="row">
-            <div class="col-sm-9 col-sm-offset-3">
-            {% include "_flash_messages.html" %}
-            {{ helper.render_project_title(project, upload_method) }}
-            <div class="padding-bottom-sm">
-                <a id="webhooks-refresh" href="#" class="btn btn-info" style="display:none;" onclick="document.location.reload(true);"> Refresh</a>
-            </div>
-            <table class="table table-stripped table-condensed table-hover table-responsive">
-                <tr>
-                    <td><strong>Created</strong></td>
-                    <td><strong>Updated</strong></td>
-                    <td><strong>Payload</strong></td>
-                    <td><strong>Response</strong></td>
-                    <td><strong>Response Status Code</strong></td>
-                    <td><strong>Repeat</strong></td>
-                </tr>
-
-                {% for response in responses | sort(reverse=True, attribute='updated') %}
-                <tr id="webhook_tr_{{response.id}}">
-                    <td>
-                        {{ response.created }}
-                    </td>
-                    <td id="response_updated_{{response.id}}">{{ response.updated }}</td>
-                    <td>{{response.payload}}</td>
-                    <td id="response_{{response.id}}">{{response.response}}</td>
-                    <td id="response_status_code_{{response.id}}">{{response.response_status_code}}</td>
-                    <td>
-                        <button class="btn btn-info" onclick="run('{{project.short_name}}', {{response.id}})">
-                            <i class="fa fa-refresh"></i>
-                        </button>
-                    </td>
-                </tr>
-                {% endfor %}
-            </table>
+<div class="container container-main">
+    <div class="row">
+        <div class="col-sm-9 col-sm-offset-3">
+        {% include "_flash_messages.html" %}
+        {{ helper.render_project_title(project, upload_method) }}
+        <div class="padding-bottom-sm">
+            <a id="webhooks-refresh" href="#" class="btn btn-info" style="display:none;" onclick="document.location.reload(true);"> Refresh</a>
         </div>
+        <table class="table table-stripped table-condensed table-hover table-responsive">
+            <tr>
+                <td><strong>Created</strong></td>
+                <td><strong>Updated</strong></td>
+                <td><strong>Payload</strong></td>
+                <td><strong>Response</strong></td>
+                <td><strong>Response Status Code</strong></td>
+                <td><strong>Repeat</strong></td>
+            </tr>
+
+            {% for response in responses | sort(reverse=True, attribute='updated') %}
+            <tr id="webhook_tr_{{response.id}}">
+                <td>
+                    {{ response.created }}
+                </td>
+                <td id="response_updated_{{response.id}}">{{ response.updated }}</td>
+                <td>{{response.payload}}</td>
+                <td id="response_{{response.id}}">{{response.response}}</td>
+                <td id="response_status_code_{{response.id}}">{{response.response_status_code}}</td>
+                <td>
+                    <button class="btn btn-info" onclick="run('{{project.short_name}}', {{response.id}})">
+                        <i class="fa fa-refresh"></i>
+                    </button>
+                </td>
+            </tr>
+            {% endfor %}
+        </table>
     </div>
 </div>
 
